# CollectionBuilders

./: .bazelrc  .swiftlint.yml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  Makefile  Package.resolved  Package.swift  README.md
.github/workflows/: artifactory.yml  bazel.yml  swift.yml
Sources/CollectionBuilders/: Array.swift  Set.swift
Tests/CollectionBuildersTests/: ArrayTests.swift  SetTests.swift
